# basic_rendering

./: CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  GLPreview.cpp  GLPreview.h  Image.cpp  Image.h  Jpeg.cpp  Jpeg.h  Light.h  README.md  Renderer.cpp  Renderer.h  TriMesh.cpp  TriMesh.h  main.cpp  random.c  random.h
